--- a/master.css
+++ b/master.css
@@ -11,6 +11,20 @@
 
 /*공통*/
 
+::-webkit-scrollbar {width: 20px}
+
+::-webkit-scrollbar-thumb {
+    background-color: #FF9F9F;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 4px solid transparent;
+    }
+
+::-webkit-scrollbar-track {
+    background-color: #FFF;
+	opacity: 0%;
+    }
+
 body {
 	overflow-x: hidden;
 }
@@ -32,7 +46,7 @@ body {
 }
 
 .intro_content {
-	width: 100%; height: 1080px;
+	width: 100%; height: auto;
 	display: flex;
 }
 
@@ -41,6 +55,7 @@ body {
 	margin: 0 auto;
 	border-radius: 20px;
 	margin-top: 200px;
+	margin-bottom: 269px;
 }
 
 .intro_content .logo {
@@ -269,21 +284,6 @@ body {
 	padding-top: 100px;
 }
 
-.index_category_section .index_category_title {
-	width: 155px;
-	background: #539DFF;
-	padding: 9px 5px 8px 35px;
-	border-radius: 50px;
-	margin-bottom: 50px;
-	display: inline-block;
-}
-
-.index_category_section .index_category_title h2 {
-	color: #FFF;
-	font-size: 28px;
-	font-family: 'Pretendard', sans-serif; font-weight: 800;
-	
-}
 
 .index_category_section .category_img {
 	width: 120px; height: 120px;
@@ -296,6 +296,7 @@ body {
 	width: 100px; height: auto;
 	margin: 0 auto;
 	background: #000;
+	margin-top: 100px;
 }
 
 .index_category_section .index_category_list {
