--- a/master.css
+++ b/master.css
@@ -25,29 +25,31 @@
 	opacity: 0%;
     }
 
-body {
+#body {
 	overflow-x: hidden;
-	overflow-y: auto;
-}
-
-
-.intro_bg {
-	width: 100%; height: 9999px;
-	background: #000;
-}
-
-.bg {
-	width: 100%;
 	background-size: cover;
     background-position: center;
     background-attachment: fixed;
 	background-repeat: repeat;
 	background-image: url("img/bg.png");
-	top: 0px;
+}
+
+#intro_body {
+	background: #000;
+	background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+	background-repeat: repeat;
+	background-image: url("img/bg.png");
+}
+
+.intro_bg {
+	width: 100%; height: 1080px;
+	background: #000;
 }
 
 .intro_content {
-	width: 100%; height: 1080px;
+	width: 100%; height: auto;
 	display: flex;
 }
 
