--- a/master.css
+++ b/master.css
@@ -11,7 +11,7 @@
 
 /*공통*/
 
-::-webkit-scrollbar {width: 20px}
+::-webkit-scrollbar {width: 5%;}
 
 ::-webkit-scrollbar-thumb {
     background-color: #FF9F9F;
@@ -45,7 +45,6 @@
 
 .intro_bg {
 	width: 100%; height: 1080px;
-	background: #000;
 }
 
 .intro_content {
