--- a/master.css
+++ b/master.css
@@ -11,7 +11,7 @@
 
 /*공통*/
 
-::-webkit-scrollbar {width: 5%;}
+::-webkit-scrollbar {width: 20px;}
 
 ::-webkit-scrollbar-thumb {
     background-color: #FF9F9F;
